--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "scripts": {
     "build": "webpack -w",
-    "watch": "webpack --watch"
+    "watch": "webpack --watch",
+    "server-start": "webpack-dev-server --mode development --open"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
@@ -19,7 +20,8 @@
     "style-loader": "^0.20.3",
     "tapable": "1.0.0-beta.5",
     "webpack": "^4.5.0",
-    "webpack-cli": "^2.0.14"
+    "webpack-cli": "^2.0.14",
+    "webpack-dev-server": "^3.1.8"
   },
   "dependencies": {
     "autoprefixer": "^8.2.0",
