--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "server-start": "webpack-dev-server --mode development --open"
   },
   "devDependencies": {
+    "@types/react": "^16.4.14",
+    "@types/react-dom": "^16.0.7",
+    "@types/react-redux": "^6.0.9",
+    "awesome-typescript-loader": "^5.2.1",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-minify-webpack-plugin": "^0.3.1",
@@ -17,8 +21,10 @@
     "html-webpack-plugin": "^3.2.0",
     "imports-loader": "^0.8.0",
     "sass-loader": "^6.0.7",
+    "source-map-loader": "^0.2.4",
     "style-loader": "^0.20.3",
     "tapable": "1.0.0-beta.5",
+    "typescript": "^3.0.3",
     "webpack": "^4.5.0",
     "webpack-cli": "^3.1.1",
     "webpack-dev-server": "^3.1.8"
