--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-minify-webpack-plugin": "^0.3.1",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
     "fast-sass-loader": "^1.4.1",
     "html-webpack-plugin": "^3.2.0",
@@ -25,12 +26,16 @@
     "style-loader": "^0.20.3",
     "tapable": "1.0.0-beta.5",
     "typescript": "^3.0.3",
-    "webpack": "^4.5.0",
+    "webpack": "^4.20.2",
     "webpack-cli": "^3.1.1",
-    "webpack-dev-server": "^3.1.8"
+    "webpack-dev-server": "^3.1.8",
+    "webpack-hot-middleware": "^2.24.2"
   },
   "dependencies": {
+    "@types/react": "^16.4.14",
+    "@types/react-dom": "^16.0.7",
     "autoprefixer": "^8.2.0",
+    "express": "^4.16.3",
     "extract-loader": "^2.0.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.11",
@@ -41,6 +46,7 @@
     "postcss-loader": "2.1.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "typescript": "^3.0.3",
     "url-loader": "^1.0.1"
   }
 }
