--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "build": "webpack -w",
     "watch": "webpack --watch",
-    "server-start": "webpack-dev-server --mode production --open"
+    "server-start": "webpack-dev-server --mode development --open"
   },
   "devDependencies": {
     "@types/react": "^16.4.14",
@@ -25,7 +25,9 @@
     "style-loader": "^0.20.3",
     "stylelint-config-recommended-scss": "^3.2.0",
     "tapable": "1.0.0-beta.5",
-    "typescript": "^3.0.3",
+    "tslint": "^5.11.0",
+    "tslint-webpack-plugin": "^1.2.2",
+    "typescript": "^3.1.1",
     "webpack": "^4.5.0",
     "webpack-cli": "^3.1.1",
     "webpack-dev-server": "^3.1.8"
@@ -47,6 +49,7 @@
     "stylelint-config-standard": "^18.2.0",
     "stylelint-scss": "^3.3.1",
     "stylelint-webpack-plugin": "^0.10.5",
+    "tslint-react": "^3.6.0",
     "url-loader": "^1.0.1",
     "webpack-hot-client": "^4.1.1",
     "webpack-merge": "^4.1.4"
