--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-hot-loader": "^4.3.11",
+    "react-redux": "5.0.7",
+    "redux": "4.0.0",
     "stylelint": "^9.6.0",
     "stylelint-config-standard": "^18.2.0",
     "stylelint-scss": "^3.3.1",
